--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css"> 
-  <link rel="stylesheet" type="text/css" href="file:///home/asmitha/test/css/960_12_col.css">
+  <link rel="stylesheet" type="text/css" href="css/960_12_col.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aguafina+Script|Lobster&display=swap" >
   <script src="https://kit.fontawesome.com/93d44d587b.js"></script>
 
@@ -28,7 +28,7 @@
 
   <!-- Add your site or application content here -->
   <header> 
-      <img src="file:///home/asmitha/Downloads/html-css-assignment/img/logo.jpeg" alt="online courses">
+      <img src="img/logo.jpeg" alt="online courses">
       <nav class="clearfix">
       <ul>
           <li>
@@ -48,17 +48,17 @@
   </header>
   <div class="parllex"></div>
   <section class="three-colum-section container_12 clearfix"> 
-    <div class="grid_4"><img src="/home/asmitha/Downloads/html-css-assignment/img/java.png" alt="java"><ul><li>duration:100hr</li>
+    <div class="grid_4"><img src="img/java.png" alt="java"><ul><li>duration:100hr</li>
     <li>fee:2000</li></ul></div>
-    <div class="grid_4"><img src="/home/asmitha/Downloads/html-css-assignment/img/python.jpeg" alt="python"><ul><li>duration:120hr</li>
+    <div class="grid_4"><img src="img/python.jpeg" alt="python"><ul><li>duration:120hr</li>
       <li>fee:3000</li></ul></div>
-      <div class="grid_4"><img src="/home/asmitha/Downloads/html-css-assignment/img/dbms.jpeg" alt="dbms"><ul><li>duration:90hr</li>
+      <div class="grid_4"><img src="img/dbms.jpeg" alt="dbms"><ul><li>duration:90hr</li>
         <li>fee:2500</li></ul></div>
 
   </section>
   <div class="hero clearfix"><p>want to learn java,python,dbms......join us..</p></div>
   <aside class="clearfix container_12">
-    <img src="file:///home/asmitha/Downloads/html-css-assignment/img/3.jpeg" alt="course content" class="grid_6">
+    <img src="img/3.jpeg" alt="course content" class="grid_6">
     <div class="grid_6 container_12">
       <ul class="grid_6">
         <li>java:</li>
