--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       <nav class="clearfix">
       <ul>
           <li>
-              <a href="#">home</a>
+              <a href="#">Home</a>
           </li>
           <li>
-              <a href="#">courses</a>
+              <a href="#">Courses</a>
           </li>
           <li>
-              <a href="#">contact</a>
+              <a href="#">Contact</a>
           </li>
           <li>
-              <a href="#">about</a>
+              <a href="#">About</a>
           </li>
       </ul>
       </nav>
